--- a/ci/.taskcat.yml
+++ b/ci/.taskcat.yml
@@ -4,4 +4,4 @@ project:
   - us-east-2
 tests:
   default:
-    template: ../templates/taskcat-ci-pipeline.yaml
+    template: ./templates/taskcat-ci-pipeline.yaml
